# APproject

./: AStarSearcher.hpp  AbstractSearchable.hpp  AbstractSearcher.hpp  BFSSearcher.cpp  BFSSearcher.hpp  BestFSSearcher.hpp  CMakeLists.txt  DFSSearcher.cpp  DFSSearcher.hpp  Element.cpp  Element.hpp  Graph.cpp  Graph.hpp  README.md  SearchExceptions.cpp  SearchExceptions.hpp  SearchResult.cpp  Searchable.hpp  Searcher.hpp  client.py  matrices.txt  tester.cpp
src/: tester
src/cache/: 2368885264.txt  2549685594.txt  3590479657.txt  3633629609.txt  3971674222.txt  info.txt
src/clienthandlers/: AbstractClientHandler.hpp  SolverClientHandler.hpp
src/search/searchable/: Graph.hpp  Searchable.hpp
src/search/searcher/: AbstractSearcher.hpp  SearchResult.cpp  SearchResult.hpp
src/searcher/: BFSSearcher.cpp  BFSSearcher.hpp  DFSSearcher.cpp  DFSSearcher.hpp  Element.cpp  Graph.hpp
